--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body{
     max-width: 1200px;
     margin: 0 auto;
     background-attachment: fixed;
-    padding: 100px 0px;
+    padding: 50px 0px;
 }
 
 .container-modifier{
@@ -445,29 +445,16 @@ body{
     margin-bottom: 32px;
 }
 
-.download{
-    width: 50%;
-}
-
-.footer_copy{
-    width: 100%;
-    color: var(--black2);
-    display: flex;
-    flex-wrap: wrap-reverse;
-}
-
-.copyright{
-    width: 100%;
-}
-
 .get-email{
     width: 50%;
+    text-align: center;
 }
 
 .socialmedia{
     margin-top: 24px;
     display: flex;
     color: var(--black2);
+    justify-content: center;
 }
 
 .socialmedia_icon{
@@ -571,7 +558,6 @@ body{
 
     .get-email{
         width: 100%;
-        margin-bottom: 40px;
     }
 
     .socialmedia_icon{
@@ -583,7 +569,7 @@ body{
     }
 }
 
-@media screen and (max-width:700px){
+@media screen and (max-width:500px){
     main .container, footer .container{
         padding: 60px;
     }
