--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ body{
     height: 80%;
     width: 50%; 
     max-width: 200px;
+    min-width: 200px;
     background: linear-gradient(180deg, var(--black2) 0%, var(--black1) 100%);
     color: #fff;
     align-content: center;
@@ -378,8 +379,9 @@ body{
 }
 
 .testimony_history{
-    font-size: 21px;
+    font-size: 18px;
     font-weight: 300;
+    font-style: italic;
 }
 
 .testimony_info{
@@ -569,7 +571,7 @@ body{
     }
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:800px){
     main .container, footer .container{
         padding: 60px;
     }
@@ -681,7 +683,7 @@ body{
     }
 }
 
-@media screen and (max-width:300px) {
+@media screen and (max-width:700px) {
     .mockup{
         width: 80%;
         margin-bottom: 15px;
@@ -701,11 +703,6 @@ body{
 
     .testimony_card{
         width: 95%;
-
-    }
-
-    .testimony_history{
-        font-size: 20px;
     }
 
     .container-modifier{
